add more to pom.xml